add actual words to hashtag each page

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
 					共同生活が得意です。
 					今まではアメリカ､中国､韓国､フランス､イギリス､フィンランド､メキシコ､リトアニア､日本出身の子とひとつ屋根の下に生活したことがあり､大体の人と仲良くなれます。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_20.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_2.png);"></div>
@@ -193,9 +193,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">2</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#台湾出身</span></h2>
 				<p class="content__item-text">
-					As civilization has become more complex, and as the need for invisible government has been increas ingly demonstrated, the technical means have been invented and developed by which opinion may be regimented.
+					台湾生まれ台湾育ち､24年間台湾で生活を送りました。
+					南国の島で、暖かいのは気温と、今時珍しい義理人情である。
+					回りやすい町、安くて美味しいご飯、数えきれない台湾の魅力をぜひプレゼンテーションさせてください！
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_1.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_3.png);"></div>
@@ -205,9 +207,10 @@
 				<span class="content__item-number oh"><span class="oh__inner">3</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
-					The invisible government tends to be concentrated in the hands of the few because of the expense of manipulating the social machinery which controls the opinions and habits of the masses.
+					いかに日本語と触れ合う時間を増えることができるかを考えて過ごした大学生活。
+					留学受験の全盛期は日本語の勉強も兼ねて、字幕を頼らないように、パソコンに紙を貼って字幕を隠した状態でドラマを見ることで友達にドン引きされたこともあります。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_2.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_4.png);"></div>
@@ -217,9 +220,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">4</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
-					No matter how sophisticated, how cynical the public may become about publicity methods, it must respond to the basic appeals, because it will always need food, crave amusement, long for beauty, respond to leadership.
+					台湾の大学では広告学科専攻で、マーケティングとブランディングを勉強。
+					学校でのグループ課題も、メディア代理店でのインターンシップのプロジェクトも、
+					ターゲット分析を担当することが多かったがゆえに、人にとても興味があります。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_3.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_5.png);"></div>
@@ -229,9 +234,10 @@
 				<span class="content__item-number oh"><span class="oh__inner">5</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#広告専攻</span></h2>
 				<p class="content__item-text">
-					This practice of creating circumstances and of creating pictures in the minds of millions of persons is very common. 
+					大学のダブルメジャー。UIUX､HCIデザインを中心に学ぶ学科です。
+					常にエンドユーザーのことを心掛けてデザインしています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_4.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_6.png);"></div>
@@ -241,9 +247,10 @@
 				<span class="content__item-number oh"><span class="oh__inner">6</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#カメラ女子</span></h2>
 				<p class="content__item-text">
-					The important thing is that it is universal and continuous; and in its sum total it is regimenting the public mind every bit as much as an army regiments the bodies of its soldiers.
+					一眼カメラ歴は7年目､フィルムカメラ歴は5年目に突入。
+					記憶が薄れていくもので､この日のこと､この瞬間のことを形に残さなきゃと思いながらシャッターを切っています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_5.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_7.png);"></div>
@@ -253,9 +260,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">7</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#毎日自炊</span></h2>
 				<p class="content__item-text">
-					When regimented, a group at times offers an irresistible pressure before which legislators, editors, and teachers are helpless.
+					混ぜる、詰める系がメインになるズボラご飯。
+					メニューに困ったらまず塩昆布にレタスを入れてサラダ作りから。
+					最近のマイブームは油揚げの肉詰めです。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_6.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_8.png);"></div>
@@ -265,9 +274,12 @@
 				<span class="content__item-number oh"><span class="oh__inner">8</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#典型的なB型</span></h2>
 				<p class="content__item-text">
-					A desire for a specific reform, however widespread, cannot be translated into action until it is made articulate, and until it has exerted sufficient pressure upon the proper law-making bodies.
+					日本に来て初めて知った、みんなはよく血液型を話題にすること。
+					（台湾では星座を語ることが多いです。）
+					よくA型と思われますが、実は典型的なB型である自覚があります。
+					好奇心旺盛、マイペース、好き嫌いがはっきりなど、血液型分析サイトに書かれた特徴をほぼ当てはまります。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_7.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_9.png);"></div>
@@ -277,9 +289,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">9</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨーグルト妖怪</span></h2>
 				<p class="content__item-text">
-					In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America.
+					特にBifiX依存症、ひどい時には1日一パックのペースで消費。
+					冷蔵庫に常備しないと不安で不安で仕方ないです。
+					一番の食べ方はカルビーのフルグラ フルーツグラノーラと混ぜて食べます。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_8.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_10.png);"></div>
@@ -289,9 +303,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">10</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#じっとしていられない</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					「ちょっとゆっくりして。」一番友達に言われる話。
+					手が止まったらなんかもったいないという精神で、
+					運動、掃除、仕事、常にフル稼働しています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_9.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_11.png);"></div>
@@ -301,9 +317,10 @@
 				<span class="content__item-number oh"><span class="oh__inner">11</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#一人居酒屋</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					お酒とおしゃべりが大好き。
+					留学の時に日本語の勉強は半分学校で、半分居酒屋のカンターで行ったと言っても過言ではありません。京都で一番好きな居酒屋「みず色クラブ」が潰れたこと、今でも悲しく思います。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_10.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_12.png);"></div>
@@ -313,9 +330,14 @@
 				<span class="content__item-number oh"><span class="oh__inner">12</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ENFJ</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					心理テストなんて信じないのに、16Personalities性格診断テストだけは信じています。
+					毎回毎回当てはまりすぎて逆に怖いくらい。
+					直近のテスト結果は（主人公）です。
+					ENFJは外向(E)、直観(N)、感情(F)、判断(J)を略しています。
+					カリスマ性があり、エネルギッシュな野心家だそうです。
+					今成長意欲MAXの私にぴったりな結果ではないでしょうか。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_11.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_13.png);"></div>
@@ -325,9 +347,12 @@
 				<span class="content__item-number oh"><span class="oh__inner">13</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#コピー本大好き</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					美しい言葉と出会ったら心がグッと刺されたようにときめきます。
+					コピー本を読むたび、やはり日本語が好きだって再確認できた。
+					実は初めて買った日本語の本もキャッチコピー集でした。
+					おすすめは「何度も読みたい広告コピー」と「3秒でハッピーになれる名言セラピー」です。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_12.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_14.png);"></div>
@@ -337,9 +362,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">14</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#被写体にもなれる</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					こう見えて、実は小さい頃の夢はモデルになることでした。
+					しかし、そんな願いを叶えずに、鏡に映っている現実を見ながらそのまま大人になった。
+					それでも、心の中にモデル魂まだ残っていたようで、大学時代からカメラを練習したい友達の被写体になったり、今もたまに写真を撮ってもらっています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_13.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_15.png);"></div>
@@ -349,9 +376,13 @@
 				<span class="content__item-number oh"><span class="oh__inner">15</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#気づいたら海へ</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					元気な時も、そうでない時。
+					少し沈む時も、そうでない時。
+					気づいたら海に向かう自分がいます。
+					海との思い出も、撮り溜めしている写真もたくさん持っているので、
+					趣味でいつか海をテーマにしたサイトを運営したいとずっと考えています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_14.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_16.png);"></div>
@@ -361,9 +392,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">16</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#Apple愛用</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					これは多くな方に共感してもらえると思います。
+					初めはiPhone、次はMacBookとiPad、イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPod Proを購入。
+					もうアップルの沼から離れません。今はApple watchを狙っています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_15.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_17.png);"></div>
@@ -373,9 +406,12 @@
 				<span class="content__item-number oh"><span class="oh__inner">17</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#イベントマニア</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					春にはお花見、夏にはフェスや花火大会。
+					秋には紅葉巡り、冬にはイルミネーションとクリスマス。
+					季節ならではのイベントを全力で楽しめたいタイプです。
+					山の日には絶対山登りをして、海の日には必ず海にいくというマイルールもあります。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_16.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_18.png);"></div>
@@ -385,9 +421,13 @@
 				<span class="content__item-number oh"><span class="oh__inner">18</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#パックチ苦手</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					小さい頃から食べ物がほとんどないことに自慢していたが、
+					どうしても受け入れないものが一つあります。
+					多くの台湾料理にはパックチがデフォルトで入っているので、取るのは必死。
+					今年こそ！って毎年パックチ料理を挑戦していたが、
+					本当に無理そうなのでもうチャンスを与えません。ごめんなさい。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_17.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_19.png);"></div>
@@ -397,9 +437,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">19</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#香りのある暮らし</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					テレワーク時期、マインドセットのため始まる新習慣。
+					香水、キャンドル、アロマ。香りグッズは一式揃っています。
+					部屋には常に香りを漂っていることで、気分が和んだりリフレッシュできたりします。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_18.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_20.png);"></div>
@@ -409,9 +451,11 @@
 				<span class="content__item-number oh"><span class="oh__inner">20</span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨガ部員</span></h2>
 				<p class="content__item-text">
-					Small groups of persons can, and do, make the rest of us think what they please about a given subject.
+					普通の常温ヨガからハンモックを使うエアリアルヨガまでやっています。
+					きっかけはテレワークによる運動不足を解消するためでしたが、
+					今は生活の一部になって、毎週欠かさずに通っています。
 				</p>
-				<a class="content__item-link oh"><span class="oh__inner">View more</span></a>
+				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_19.png);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.png);"></div>
