--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,17 @@
 	<main>
 		<!-- <div class -->
 
+		<div class="side_bar_container">
+			<div class="side_bar_title_prop">Explore this page</div>
+			<div class="side_bar_contents_container">
+				<div class="side_bar_contents_emoji">⬇️</div>
+				<div class="side_bar_contents_text" style="color: #6B89A5">Scroll</div>
+			</div>
+			<div class="side_bar_contents_container">
+				<div class="side_bar_contents_emoji">🐭</div>
+				<div class="side_bar_contents_text" style="color: #8B7E85; margin-bottom: 2.7rem;">Click</div>
+			</div>
+		</div>
 		<div class="grid grid--large">
 			<!-- <div class="grid__cell grid__cell-c3-r2 grid__cell--padded">
 				<div class="frame">
