--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,16 @@
 			</div> -->
 
 			<div class="side_bar_container">
-			<div class="side_bar_title_prop">Explore this page</div>
-			<div class="side_bar_contents_container">
-				<div class="side_bar_contents_emoji">⬇️</div>
-				<div class="side_bar_contents_text" style="color: #6B89A5">Scroll</div>
+				<div class="side_bar_title_prop">Explore this page</div>
+				<div class="side_bar_contents_container">
+					<div class="side_bar_contents_emoji">⬇️</div>
+					<div class="side_bar_contents_text" style="color: #6B89A5">Scroll</div>
+				</div>
+				<div class="side_bar_contents_container">
+					<div class="side_bar_contents_emoji">🐭</div>
+					<div class="side_bar_contents_text" style="color: #8B7E85; margin-bottom: 2.7rem;">Click</div>
+				</div>
 			</div>
-			<div class="side_bar_contents_container">
-				<div class="side_bar_contents_emoji">🐭</div>
-				<div class="side_bar_contents_text" style="color: #8B7E85; margin-bottom: 2.7rem;">Click</div>
-			</div>
-		</div>
 
 			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
 				<!-- <a href="https://twitter.com/codrops" class="oh"><span class="oh__inner">@codrops</span></a> -->
@@ -476,7 +476,8 @@
 				</nav>
 			</div>
 			<button class="back">
-				<svg viewBox="0 0 50 9" width="100%"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg>
+				<svg viewBox="0 0 50 9" width="20%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg>
+				Back to list
 			</button>
 			<nav class="grid grid--mini" style="width: 70%;">
 				<div class="grid__cell grid__cell-c1-r1">
