--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,53 @@
 				</div>
 			</div>
 
+			
+
+		</div>
+		<!-- footer -->
+		<div class="footer_container">
+			<div class="footer_top_container">
+				<div class="footer_title_container">
+					<span class="footer_title_prop">After design</span>
+					<span class="footer_title_prop">All will be</span>
+					<span class="footer_title_prop">beautiful days</span>
+				</div>
+				<div class="footer_nav_container">
+					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio/#/about" target="_self">About</a>
+					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio_hashtags/" target="_self">Special content-#hashtags of me</a>
+					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio/#/works" target="_self">Works</a>
+					<a class="footer_nav_prop" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Back to top</a>
+				</div>
+			</div>
+			<div class="footer_divider"></div>
+			<div class="footer_bottom_container">
+				<div class="footer_copyright">©2022Tai, Tung-En</div>
+				<div class="footer_author_container">
+					<div class="footer_author_each_container">
+						<div class="footer_responsibility">Presented by</div>
+						<div class="footer_author_detailed_container">
+							<div class="footer_author_emoji">🤭</div>
+							<div class="footer_author_name">Tai, Tung-En (Direction/Design)</div>
+							<a class="footer_url_container" href="mailto:chloe981219@gmail.com?subject=Greetings from {Please Enter Your Name Here}" target="_blank">
+								<img class="footer_url_contents_prop" src="img/icons/envelope.svg"></img>
+							</a>
+							<a class="footer_url_container" href="https://chloe981219.medium.com/" target="_blank">
+								<img class="footer_url_contents_prop" src="img/icons/medium.svg"></img>
+							</a>
+						</div>
+					</div>
+					<div class="footer_author_each_container">
+						<div class="footer_responsibility">Especially thanks</div>
+						<div class="footer_author_detailed_container">
+							<div class="footer_author_emoji">🥸</div>
+							<div class="footer_author_name">Hsiao, Yi-Han (Engineering)</div>
+							<a class="footer_url_container" href="https://github.com/yihanYozikua" target="_blank">
+								<img class="footer_url_contents_prop" src="img/icons/github.svg"></img>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="content">
 			<div class="content__item" id="item-1">
