fix the contents

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,13 @@
 					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
 				</div>
 			</div> -->
+			<a class="back_to_about" href="https://yihanyozikua.github.io/tai_portfolio/#/about">
+				<!-- <svg viewBox="0 0 50 9" width="15%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg> -->
+				<img src="./img/arrow_left.svg" style="margin-right: 1rem;"></img>
+				Back to About
+			</a>
 
-			<div class="side_bar_container">
+			<div class="grid__cell side_bar_container">
 				<div class="side_bar_title_prop">Explore this page</div>
 				<div class="side_bar_contents_container">
 					<div class="side_bar_contents_emoji">⬇️</div>
@@ -33,7 +38,7 @@
 				</div>
 				<div class="side_bar_contents_container">
 					<div class="side_bar_contents_emoji">🐭</div>
-					<div class="side_bar_contents_text" style="color: #8B7E85; margin-bottom: 2.7rem;">Click</div>
+					<div class="side_bar_contents_text" style="color: #8B7E85;">Click</div>
 				</div>
 			</div>
 
@@ -423,7 +428,7 @@
 				<h2 class="content__item-heading oh"><span class="oh__inner">#被写体にもなれる</span></h2>
 				<p class="content__item-text">
 					こう見えて、実は小さい頃の夢はモデルになることでした。
-					しかし、そんな願いを叶えずに、鏡に映っている現実を見ながらそのまま大人になった。
+					しかし、そんな願いを叶えずに、鏡に映っている現実を見ながらそのまま大人になりました。
 					それでも、心の中にモデル魂まだ残っていたようで、大学時代からカメラを練習したい友達の被写体になったり、今もたまに写真を撮ってもらっています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
@@ -522,7 +527,8 @@
 				</nav>
 			</div>
 			<button class="back">
-				<svg viewBox="0 0 50 9" width="20%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg>
+				<!-- <svg viewBox="0 0 50 9" width="20%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg> -->
+				<img src="./img/arrow_left.svg" style="margin-right: 1rem;"></img>
 				Back to list
 			</button>
 			<nav class="grid grid--mini" style="width: 70%;">
