--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
 		</div>
 		<div class="content">
 			<div class="content__item" id="item-1">
-				<span class="content__item-number oh"><span class="oh__inner">1</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#シェアハウス5年目</span></h2>
 				<p class="content__item-text">
 					共同生活が得意です。
@@ -255,12 +255,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-2">
-				<span class="content__item-number oh"><span class="oh__inner">2</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#台湾出身</span></h2>
 				<p class="content__item-text">
 					台湾生まれ台湾育ち､24年間台湾で生活を送りました。
-					南国の島で、暖かいのは気温と、今時珍しい義理人情である。
-					回りやすい町、安くて美味しいご飯、数えきれない台湾の魅力をぜひプレゼンテーションさせてください！
+					南国の島で、暖かいのは気温と、今時珍しい義理人情である。回りやすい町、安くて美味しいご飯、数えきれない台湾の魅力をぜひプレゼンテーションさせてください！
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -269,7 +268,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-3">
-				<span class="content__item-number oh"><span class="oh__inner">3</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
 					いかに日本語と触れ合う時間を増えることができるかを考えて過ごした大学生活。
@@ -282,12 +281,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-4">
-				<span class="content__item-number oh"><span class="oh__inner">4</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#日本語オタク</span></h2>
 				<p class="content__item-text">
 					台湾の大学では広告学科専攻で、マーケティングとブランディングを勉強。
-					学校でのグループ課題も、メディア代理店でのインターンシップのプロジェクトも、
-					ターゲット分析を担当することが多かったがゆえに、人にとても興味があります。
+					学校でのグループ課題も、メディア代理店でのインターンシップのプロジェクトも、ターゲット分析を担当することが多かったがゆえに、人にとても興味があります。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -296,7 +294,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-5">
-				<span class="content__item-number oh"><span class="oh__inner">5</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#広告専攻</span></h2>
 				<p class="content__item-text">
 					大学のダブルメジャー。UIUX､HCIデザインを中心に学ぶ学科です。
@@ -309,7 +307,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-6">
-				<span class="content__item-number oh"><span class="oh__inner">6</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#カメラ女子</span></h2>
 				<p class="content__item-text">
 					一眼カメラ歴は7年目､フィルムカメラ歴は5年目に突入。
@@ -322,7 +320,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-7">
-				<span class="content__item-number oh"><span class="oh__inner">7</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#毎日自炊</span></h2>
 				<p class="content__item-text">
 					混ぜる、詰める系がメインになるズボラご飯。
@@ -336,11 +334,10 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-8">
-				<span class="content__item-number oh"><span class="oh__inner">8</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#典型的なB型</span></h2>
 				<p class="content__item-text">
-					日本に来て初めて知った、みんなはよく血液型を話題にすること。
-					（台湾では星座を語ることが多いです。）
+					日本に来て初めて知った、みんなはよく血液型を話題にすること。（台湾では星座を語ることが多いです。）
 					よくA型と思われますが、実は典型的なB型である自覚があります。
 					好奇心旺盛、マイペース、好き嫌いがはっきりなど、血液型分析サイトに書かれた特徴をほぼ当てはまります。
 				</p>
@@ -351,12 +348,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-9">
-				<span class="content__item-number oh"><span class="oh__inner">9</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨーグルト妖怪</span></h2>
 				<p class="content__item-text">
 					特にBifiX依存症、ひどい時には1日一パックのペースで消費。
-					冷蔵庫に常備しないと不安で不安で仕方ないです。
-					一番の食べ方はカルビーのフルグラ フルーツグラノーラと混ぜて食べます。
+					冷蔵庫に常備しないと不安で不安で仕方ないです。一番の食べ方はカルビーのフルグラフルーツグラノーラと混ぜて食べます。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -365,12 +361,10 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-10">
-				<span class="content__item-number oh"><span class="oh__inner">10</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#じっとしていられない</span></h2>
 				<p class="content__item-text">
-					「ちょっとゆっくりして。」一番友達に言われる話。
-					手が止まったらなんかもったいないという精神で、
-					運動、掃除、仕事、常にフル稼働しています。
+					「ちょっとゆっくりして。」一番友達に言われる話。手が止まったらなんかもったいないという精神で、運動、掃除、仕事、常にフル稼働しています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -379,7 +373,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-11">
-				<span class="content__item-number oh"><span class="oh__inner">11</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#一人居酒屋</span></h2>
 				<p class="content__item-text">
 					お酒とおしゃべりが大好き。
@@ -392,15 +386,12 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-12">
-				<span class="content__item-number oh"><span class="oh__inner">12</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ENFJ</span></h2>
 				<p class="content__item-text">
-					心理テストなんて信じないのに、16Personalities性格診断テストだけは信じています。
-					毎回毎回当てはまりすぎて逆に怖いくらい。
+					心理テストなんて信じないのに、16Personalities性格診断テストだけは信じています。毎回毎回当てはまりすぎて逆に怖いくらい。
 					直近のテスト結果は（主人公）です。
-					ENFJは外向(E)、直観(N)、感情(F)、判断(J)を略しています。
-					カリスマ性があり、エネルギッシュな野心家だそうです。
-					今成長意欲MAXの私にぴったりな結果ではないでしょうか。
+					ENFJは外向(E)、直観(N)、感情(F)、判断(J)を略しています。カリスマ性があり、エネルギッシュな野心家だそうです。今成長意欲MAXの私にぴったりな結果ではないでしょうか。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -409,13 +400,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-13">
-				<span class="content__item-number oh"><span class="oh__inner">13</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#コピー本大好き</span></h2>
 				<p class="content__item-text">
 					美しい言葉と出会ったら心がグッと刺されたようにときめきます。
-					コピー本を読むたび、やはり日本語が好きだって再確認できた。
-					実は初めて買った日本語の本もキャッチコピー集でした。
-					おすすめは「何度も読みたい広告コピー」と「3秒でハッピーになれる名言セラピー」です。
+					コピー本を読むたび、やはり日本語が好きだって再確認できた。実は初めて買った日本語の本もキャッチコピー集でした。おすすめは「何度も読みたい広告コピー」と「3秒でハッピーになれる名言セラピー」です。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -424,7 +413,7 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-14">
-				<span class="content__item-number oh"><span class="oh__inner">14</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#被写体にもなれる</span></h2>
 				<p class="content__item-text">
 					こう見えて、実は小さい頃の夢はモデルになることでした。
@@ -438,13 +427,12 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-15">
-				<span class="content__item-number oh"><span class="oh__inner">15</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#気づいたら海へ</span></h2>
 				<p class="content__item-text">
-					元気な時も、そうでない時。
+					元気な時も、そうでない時。<br style="line-height: .5rem;"></br>
 					少し沈む時も、そうでない時。
-					気づいたら海に向かう自分がいます。
-					海との思い出も、撮り溜めしている写真もたくさん持っているので、
+					気づいたら海に向かう自分がいます。海との思い出も、撮り溜めしている写真もたくさん持っているので、
 					趣味でいつか海をテーマにしたサイトを運営したいとずっと考えています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
@@ -454,12 +442,12 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-16">
-				<span class="content__item-number oh"><span class="oh__inner">16</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#Apple愛用</span></h2>
 				<p class="content__item-text">
 					これは多くな方に共感してもらえると思います。
-					初めはiPhone、次はMacBookとiPad、イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPod Proを購入。
-					もうアップルの沼から離れません。今はApple watchを狙っています。
+					初めはiPhone、次はMacBookとiPad、イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPodProを購入。
+					もうアップルの沼から離れません。今はAppleWatchを狙っています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -468,13 +456,12 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-17">
-				<span class="content__item-number oh"><span class="oh__inner">17</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#イベントマニア</span></h2>
 				<p class="content__item-text">
 					春にはお花見、夏にはフェスや花火大会。
 					秋には紅葉巡り、冬にはイルミネーションとクリスマス。
-					季節ならではのイベントを全力で楽しめたいタイプです。
-					山の日には絶対山登りをして、海の日には必ず海にいくというマイルールもあります。
+					季節ならではのイベントを全力で楽しめたいタイプです。山の日には絶対山登りをして、海の日には必ず海にいくというマイルールもあります。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -483,14 +470,12 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-18">
-				<span class="content__item-number oh"><span class="oh__inner">18</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#パックチ苦手</span></h2>
 				<p class="content__item-text">
-					小さい頃から食べ物がほとんどないことに自慢していたが、
-					どうしても受け入れないものが一つあります。
+					小さい頃から食べ物がほとんどないことに自慢していたが、どうしても受け入れないものが一つあります。
 					多くの台湾料理にはパックチがデフォルトで入っているので、取るのは必死。
-					今年こそ！って毎年パックチ料理を挑戦していたが、
-					本当に無理そうなのでもうチャンスを与えません。ごめんなさい。
+					今年こそ！って毎年パックチ料理を挑戦していたが、本当に無理そうなのでもうチャンスを与えません。ごめんなさい。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -499,12 +484,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-19">
-				<span class="content__item-number oh"><span class="oh__inner">19</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#香りのある暮らし</span></h2>
 				<p class="content__item-text">
 					テレワーク時期、マインドセットのため始まる新習慣。
-					香水、キャンドル、アロマ。香りグッズは一式揃っています。
-					部屋には常に香りを漂っていることで、気分が和んだりリフレッシュできたりします。
+					香水、キャンドル、アロマ。香りグッズは一式揃っています。部屋には常に香りを漂っていることで、気分が和んだりリフレッシュできたりします。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -513,12 +497,11 @@
 				</nav>
 			</div>
 			<div class="content__item" id="item-20">
-				<span class="content__item-number oh"><span class="oh__inner">20</span></span>
+				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#ヨガ部員</span></h2>
 				<p class="content__item-text">
 					普通の常温ヨガからハンモックを使うエアリアルヨガまでやっています。
-					きっかけはテレワークによる運動不足を解消するためでしたが、
-					今は生活の一部になって、毎週欠かさずに通っています。
+					きっかけはテレワークによる運動不足を解消するためでしたが、今は生活の一部になって、毎週欠かさずに通っています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
