add fade-in to hashtag index

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<title>Tai's Portfolio</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -45,12 +46,22 @@
 			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
 				<!-- <a href="https://twitter.com/codrops" class="oh"><span class="oh__inner">@codrops</span></a> -->
 			</div>
-			<div class="grid__cell grid__cell-c1-r1">
+			<div class="grid__cell grid__cell-c1-r1"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)" data-item="item-1"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c3-r1">
+			<div class="grid__cell grid__cell-c3-r1"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)" data-item="item-2"></div>
 				</div>
@@ -60,12 +71,22 @@
 					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c4-r1">
+			<div class="grid__cell grid__cell-c4-r1"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)" data-item="item-3"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r2">
+			<div class="grid__cell grid__cell-c1-r2"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)" data-item="item-4"></div>
 				</div>
@@ -75,32 +96,62 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner">There are 20 hashtags about my personalities, hobbies, preference, and lovely daily life.</span></p>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c2-r2">
+			<div class="grid__cell grid__cell-c2-r2"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)" data-item="item-5"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c2-r3">
+			<div class="grid__cell grid__cell-c2-r3"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)" data-item="item-6"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c4-r3">
+			<div class="grid__cell grid__cell-c4-r3"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)" data-item="item-7"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r4">
+			<div class="grid__cell grid__cell-c1-r4"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_8.png)" data-item="item-8"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c3-r4">
+			<div class="grid__cell grid__cell-c3-r4"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_9.png)" data-item="item-9"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c2-r4">
+			<div class="grid__cell grid__cell-c2-r4"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)" data-item="item-10"></div>
 				</div>
@@ -115,7 +166,12 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c4-r4">
+			<div class="grid__cell grid__cell-c4-r4"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_11.png)" data-item="item-11"></div>
 				</div>
@@ -125,23 +181,43 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r5">
+			<div class="grid__cell grid__cell-c1-r5"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_12.png)" data-item="item-12"></div>
 				</div>
 			</div>
 
-			<div class="grid__cell grid__cell-c3-r5">
+			<div class="grid__cell grid__cell-c3-r5"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_13.png)" data-item="item-13"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c4-r5">
+			<div class="grid__cell grid__cell-c4-r5"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_14.png)" data-item="item-14"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c1-r6">
+			<div class="grid__cell grid__cell-c1-r6"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_15.png)" data-item="item-15"></div>
 				</div>
@@ -156,12 +232,22 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c2-r6">
+			<div class="grid__cell grid__cell-c2-r6"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png)" data-item="item-16"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c3-r6">
+			<div class="grid__cell grid__cell-c3-r6"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_17.png)" data-item="item-17"></div>
 				</div>
@@ -171,7 +257,12 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div> -->
-			<div class="grid__cell grid__cell-c2-r7">
+			<div class="grid__cell grid__cell-c2-r7"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_18.png)" data-item="item-18"></div>
 				</div>
@@ -181,12 +272,22 @@
 					<p class="frame__title oh" style="margin: 0 0; width: 99%;"><span class="oh__inner"></span></p>
 				</div>
 			</div> -->
-			<div class="grid__cell grid__cell-c3-r7">
+			<div class="grid__cell grid__cell-c3-r7"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_19.png)" data-item="item-19"></div>
 				</div>
 			</div>
-			<div class="grid__cell grid__cell-c4-r7">
+			<div class="grid__cell grid__cell-c4-r7"
+				data-aos="fade-zoom-in"
+				data-aos-easing="ease-in-back"
+				data-aos-offset="0"
+				data-aos-duration="300"
+				data-aos-once="false">
 				<div class="grid__cell-img">
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_20.png)" data-item="item-20"></div>
 				</div>
@@ -625,6 +726,31 @@
 	</main>
 	<!-- Excerpts from: Propaganda (1928) by Edward Bernays -->
 	<script type="module" src="js/index.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+		AOS.init({
+			// Global settings:
+			disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+			startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+			initClassName: 'aos-init', // class applied after initialization
+			animatedClassName: 'aos-animate', // class applied on animation
+			useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+			disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+			debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+			throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+			
+
+			// Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+			offset: 120, // offset (in px) from the original trigger point
+			delay: 0, // values from 0 to 3000, with step 50ms
+			duration: 400, // values from 0 to 3000, with step 50ms
+			easing: 'ease', // default easing for AOS animations
+			once: false, // whether animation should happen only once - while scrolling down
+			mirror: false, // whether elements should animate out while scrolling past them
+			anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+		});
+	</script>
 </body>
 
 </html>
